# ASL

backend/: asl.ipynb  main.py  pyproject.toml  requirements.txt
frontend/: README.md  package.json  svelte.config.js  vite.config.ts
frontend/src/routes/: +page.svelte  layout.css
frontend/src/routes/api/predict/: +server.ts
